--- a/.github/workflows/download_indexPriceKlines.yml
+++ b/.github/workflows/download_indexPriceKlines.yml
@@ -22,53 +22,40 @@ jobs:
       - name: Install unzip & curl
         run: sudo apt-get update && sudo apt-get install -y unzip curl
 
-      - name: Download & extract indexPriceKlines (Backfill)
+      - name: Determine yesterday
+        id: dates
+        run: echo "END=$(date -I -d 'yesterday')" >> $GITHUB_ENV
+
+      - name: Download & extract yesterday’s indexPriceKlines
         shell: bash
         run: |
           set -euo pipefail
           SYMBOL=${{ matrix.symbol }}
-          YESTERDAY=$(date -I -d "yesterday")
-          INTERVALS=( "1h" "4h" )
-
-          for iv in "${INTERVALS[@]}"; do
-            TARGET_DIR="historical_tech/indexPriceKlines/${SYMBOL}/${iv}"
-            if compgen -G "$TARGET_DIR/${SYMBOL}-${iv}-*.csv" > /dev/null; then
-              LAST=$(find "$TARGET_DIR" -type f -name "${SYMBOL}-${iv}-*.csv" \
-                | sed -E "s/.*${SYMBOL}-${iv}-([0-9]{4}-[0-9]{2}-[0-9]{2})\.csv/\1/" \
-                | sort | tail -n1)
-              START=$(date -d "$LAST +1 day" '+%Y-%m-%d')
-            else
-              START="$YESTERDAY"
-            fi
-            END="$YESTERDAY"
-
+          DATE=$END
+          for iv in 1h 4h; do
             BASE="data/futures/um/daily/indexPriceKlines/${SYMBOL}/${iv}"
             mkdir -p "$BASE"
-
-            cur="$START"
-            while [[ "$cur" < "$END" || "$cur" == "$END" ]]; do
-              ZIP="${SYMBOL}-${iv}-${cur}.zip"
-              URL="https://data.binance.vision/data/futures/um/daily/indexPriceKlines/${SYMBOL}/${iv}/${ZIP}"
-              echo "→ Fetching $ZIP"
-              if curl -sSf "$URL" -o tmp.zip; then
-                unzip -p tmp.zip > "$BASE/${ZIP%.zip}.csv"
-                rm tmp.zip
-                echo " ✅ extracted ${ZIP}"
-              else
-                echo " ⚠️ missing ${ZIP}"
-                rm -f tmp.zip || true
-              fi
-              cur=$(date -I -d "$cur +1 day")
-            done
+            ZIP="${SYMBOL}-${iv}-${DATE}.zip"
+            URL="https://data.binance.vision/data/futures/um/daily/indexPriceKlines/${SYMBOL}/${iv}/${ZIP}"
+            echo "→ Fetching $ZIP"
+            if curl -sSf "$URL" -o tmp.zip; then
+              unzip -p tmp.zip > "$BASE/${ZIP%.zip}.csv"
+              rm tmp.zip
+              echo " ✅ extracted ${ZIP}"
+            else
+              echo " ⚠️ missing ${ZIP}"
+              rm -f tmp.zip || true
+            fi
           done
 
-      - name: Upload indexPriceKlines artifacts
+      - name: Upload yesterday’s indexPriceKlines only
         uses: actions/upload-artifact@v4
         with:
           name: data-indexPriceKlines-${{ matrix.symbol }}
           path: |
-            data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/1h/*.csv
-            data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/4h/*.csv
+            data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/1h/${{ matrix.symbol }}-1h-${{ env.END }}.csv
+            data/futures/um/daily/indexPriceKlines/${{ matrix.symbol }}/4h/${{ matrix.symbol }}-4h-${{ env.END }}.csv
+          if-no-files-found: ignore
 
   aggregate_and_push:
     name: Aggregate & Commit indexPriceKlines Data
@@ -93,18 +80,12 @@ jobs:
           set -euo pipefail
           ROOT="historical_tech/indexPriceKlines/data-artifacts"
           mkdir -p "$ROOT"
-
-          # Datei-für-Datei verschieben, damit keine leeren Ordner konfligieren
-          find data-artifacts -type f -name '*.csv' | while read src; do
-            # src = data-artifacts/data-indexPriceKlines-<SYM>/<int>/<file>.csv
-            symbol_dir=$(basename "$(dirname "$(dirname "$src")")")
-            symbol=${symbol_dir#data-indexPriceKlines-}         # z.B. BTCUSDT
-            interval=$(basename "$(dirname "$src")")           # "1h" oder "4h"
-            file=$(basename "$src")
-            dst="$ROOT/${symbol_dir}/${interval}/${file}"
-            mkdir -p "$(dirname "$dst")"
-            mv "$src" "$dst"
-            echo " ➕ $dst"
+          for art in data-artifacts/*; do
+            name=$(basename "$art")                       # data-indexPriceKlines-<SYMBOL>
+            dst="$ROOT/$name"
+            mkdir -p "$dst"
+            mv "$art"/* "$dst"/
+            echo " ➕ Moved $name → $dst"
           done
 
       - name: Commit & Push indexPriceKlines
@@ -118,6 +99,7 @@ jobs:
           if git diff --cached --quiet; then
             echo "✅ No new indexPriceKlines to commit"
           else
-            git commit -m "chore(data): backfill indexPriceKlines [skip ci]"
+            git commit -m "chore(data): import indexPriceKlines ${END} [skip ci]"
             git push origin HEAD:main
           fi
+
