--- a/.github/workflows/download_history.yml
+++ b/.github/workflows/download_history.yml
@@ -3,8 +3,8 @@ name: 🔄 Download & Commit Historical Klines
 on:
   workflow_dispatch:
   schedule:
-    # täglich 08:00 UTC
-    - cron: '0 8 * * *'
+    # täglich 02:00 UTC
+    - cron: '0 2 * * *'
 
 jobs:
   download_matrix:
@@ -16,15 +16,11 @@ jobs:
         interval: [1m, 5m, 15m, 1h, 4h]
       max-parallel: 30
 
-    env:
-      # Wir schreiben das Backfill‐END ins Environment, um es im Upload‐Step zu nutzen
-      END: ${{ steps.dates.outputs.END }}
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Install unzip (für funzip)
+      - name: Install funzip
         run: sudo apt-get update && sudo apt-get install -y unzip
 
       - name: Determine Backfill Date Range
@@ -45,7 +41,6 @@ jobs:
           END="$YESTERDAY"
           echo "START=$START" >> $GITHUB_ENV
           echo "END=$END"     >> $GITHUB_ENV
-          echo "::set-output name=END::$END"
 
       - name: Download History Range
         shell: bash
@@ -62,7 +57,7 @@ jobs:
         with:
           name: historical-${{ matrix.symbol }}-${{ matrix.interval }}
           path: |
-            historical/historical-${{ matrix.symbol }}-${{ matrix.interval }}/${{ matrix.symbol }}-${{ matrix.interval }}-${{ env.END }}.csv
+            historical/historical-${{ matrix.symbol }}-${{ matrix.interval }}/*-${{ env.END }}.csv
           if-no-files-found: ignore
 
   aggregate_and_push:
@@ -77,7 +72,7 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
 
-      - name: Download all historical artifacts
+      - name: Download all historical-artifacts
         uses: actions/download-artifact@v4
         with:
           path: ./historical-artifacts
@@ -87,7 +82,7 @@ jobs:
         run: |
           mkdir -p historical
           find historical-artifacts -type f | while read src; do
-            rel=${src#historical-artifacts/}           # etwa: historical-BTCUSDT-1h/BTCUSDT-1h-2025-05-18.csv
+            rel=${src#historical-artifacts/}  
             dst="historical/${rel}"
             mkdir -p "$(dirname "$dst")"
             mv "$src" "$dst"
